fix : modify template (LaTex)

--- a/Template/template.tex
+++ b/Template/template.tex
@@ -29,7 +29,7 @@
 
 
 % Title Page
-\title{HW01 - REPORT}
+\title{HW00 - REPORT}
 \author{정보컴퓨터공학부 201624536 이국현}
 
 
@@ -37,17 +37,20 @@
 \maketitle
 
 
-\section{서론}
-\subsection{Subsection}
+\chapter{서론}
 \begin{itemize}
-	\item Item1
-	\item Item2
+	\item Topic 1
+	\item Topic 2
+	\item Topic 3
 \end{itemize}
 
-\section{본론}
+\section{Part 1: Topic1}
+\section*{Part 2: Topic2}
+
+\chapter{본론}
 
 
-\section{결론}
+\chapter{결론}
 
 
 \end{document}          
