--- a/Template/template.tex
+++ b/Template/template.tex
@@ -11,7 +11,7 @@
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
 \lstset{frame=tb,
-	language=Java,
+	language=Python,
 	aboveskip=3mm,
 	belowskip=3mm,
 	showstringspaces=false,
